--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="icon2.png">
+    <link rel="icon" href="./img/icon2.png">
+
+    <link rel="stylesheet" href="style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,19 +15,122 @@
     <title>Cardápio - Room Service</title>
   </head>
 
-  <body>
+  <body class="pagina">
+    
     <div class="container">
         <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Grand Bittar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Café da Manhã</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Pratos Principais</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Saladas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Sopas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Sanduíches</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Sobremesas</a>
+                      </li>
+                  </div>
                 </div>
-              </div>
+              </nav>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-4 g-3">
+
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/breakfast.jpg" class="card-img-top" height="200" width="90">
+                <div class="card-body">
+                  <h5 class="card-title">Café da Manhã</h5>
+                  <p class="card-text">Seleção de pães frescos como croissants, brioches, pães de doces e salgados, bolo manteiga, géleia, mel iorgute, frutas da estação, molho de salsisha, ovos mexidos, bacon, frios, suco da fruta, café e leite.</p>
+                  <p class="card-text">R$ 36.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
           </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/peito-frango.jpg.jpg" class="card-img-top" height="242" width="90">
+                <div class="card-body">
+                  <h5 class="card-title">Peito de Frango à Provençal</h5>
+                  <p class="card-text">Peito de frango grelhado ao molho de creme de leite com cogumelos, ceblo servido com arroz ou purê de batata.</p>
+                  <p class="card-text">R$ 49.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/pesacada.jpg" class="card-img-top" height="310" width="100">
+                <div class="card-body">
+                  <h5 class="card-title">Pescada Amarela</h5>
+                  <p class="card-text">Peixe Servido com molho de alho poro e legumes cozido.</p>
+                  <p class="card-text">R$ 62.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/breakfast.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Salada do Chef</h5>
+                  <p class="card-text">Seleção de pães frescos como croissants, brioches, pães de doces e salgados, bolo manteiga, géleia, mel iorgute, frutas da estação, molho de salsisha, ovos mexidos, bacon, frios, suco da fruta, café e leite.</p>
+                  <p class="card-text">R$ 36.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/breakfast.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Café da Manhã</h5>
+                  <p class="card-text">Seleção de pães frescos como croissants, brioches, pães de doces e salgados, bolo manteiga, géleia, mel iorgute, frutas da estação, molho de salsisha, ovos mexidos, bacon, frios, suco da fruta, café e leite.</p>
+                  <p class="card-text">R$ 36.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/breakfast.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Café da Manhã</h5>
+                  <p class="card-text">Seleção de pães frescos como croissants, brioches, pães de doces e salgados, bolo manteiga, géleia, mel iorgute, frutas da estação, molho de salsisha, ovos mexidos, bacon, frios, suco da fruta, café e leite.</p>
+                  <p class="card-text">R$ 36.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          <div class="col mt-5">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/breakfast.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Café da Manhã</h5>
+                  <p class="card-text">Seleção de pães frescos como croissants, brioches, pães de doces e salgados, bolo manteiga, géleia, mel iorgute, frutas da estação, molho de salsisha, ovos mexidos, bacon, frios, suco da fruta, café e leite.</p>
+                  <p class="card-text">R$ 36.00</p>
+                  <a href="#" class="btn btn-primary">Ligar para o Restaurante</a>
+                </div>
+              </div> 
+          </div>
+          
+
         </div>
     </div>
 
